# russitant

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  theme.json  tsconfig.json
.storybook/: main.ts  preview.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: download.rs  llm_backend.rs  localstore.rs  main.rs  model_settings.rs  stablediffusion.rs
src/app/: globals.css  greet.tsx  layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/chat/: page.tsx
src/app/components/: Chat.tsx  ChatLine.tsx
src/app/dream/: page.tsx
src/app/flow/: page.tsx
src/app/layout/: Main.tsx
src/app/settings/: page.tsx
src/component/: Button.tsx  Canvas.tsx  ChatBox.tsx  ChatLine.tsx  DownloadProgress.tsx  Input.tsx  JSpinner.tsx  ModelConfig.tsx  ModelListItem.tsx  ModelSelector.tsx  PromptForm.tsx  Select.tsx  Sidebar.tsx  Spinner.tsx  Switch.tsx  TextField.tsx  ToggleButton.tsx
src/context/: sidebar-context.tsx
src/data/: ModelMetadata.tsx  models.ts
src/hook/: useModelDownload.tsx  useProps.tsx
src/interfaces/: types.ts
src/invoke/: api.tsx  command.tsx  model.ts
src/layout/: view.tsx
src/lib/: demos.ts
src/providers/: global.ts  model.ts  store.ts
src/services/: client.tsx
src/stories/: Button.stories.ts  ChatBox.stories.ts  ChatLine.stories.ts  SpinnerButton.stories.ts
src/styles/: globals.css
src/ui/: boundary.tsx  global-nav.tsx  logo.tsx  mobile-nav-toggle.tsx  sidebar.tsx
src/ui/component/: Boundary.tsx  ChatBox.tsx  ChatLine.tsx  Sidebar.tsx
(+1 files in other folders)
